--- a/.env
+++ b/.env
@@ -3,12 +3,9 @@ API_GATEWAY_HTTP_PORT      = :8888
 
 USER_SERVICE_GRPC_HOST     = localhost
 USER_SERVICE_GRPC_PORT     = :7777
-# PFT_Users_service
-# LEARNING_SERVICE_GRPC_HOST = localhost
-# LEARNING_SERVICE_GRPC_PORT = :6666
 
-# PROGRESS_SERVICE_GRPC_HOST = localhost
-# PROGRESS_SERVICE_GRPC_PORT = :5555
+BUDGETING_SERVICE_GRPC_HOST = localhost
+BUDGETING_SERVICE_GRPC_PORT = :5555
 
 POSTGRES_HOST              = localhost
 POSTGRES_PORT              = 5432
@@ -31,7 +28,7 @@ SINGNING_KEY_ACCESS        = 2#$%t^y&*^y%tERTTT54R4R4R4R4RGFRrefgbhtnt
 SINGNING_KEY_REFRESH       = fvbhy^tgyhnty%^$hgtet$hy%#yu^ik&I5UR6YEU46J75JYRHTGERFDVBGTHr
 
 LOG_PATH                   = app.log
-SERVICE_NAME               = api_gateway
+SERVICE_NAME               = users_service
 LOGGER_LEVEL               = debug
 
 EMAIL                      =kupalovv.muhammadjon@gmail.com
